syntax = "proto3";

import "google/protobuf/timestamp.proto";

package crype;
option go_package = "github.com/mateitudose/crype";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc CheckOrderStatus (CheckOrderStatusRequest) returns (stream CheckOrderStatusResponse) {}
}

enum OrderStatus {
  PENDING = 0;
  PROCESSING = 1;
  CONFIRMED = 2;
  FAILED = 3;
  CANCELED = 4;
}

message CreateOrderRequest {
  double amount = 1;
  string currency = 2;
}

message CreateOrderResponse {
  string id = 1;
  string payment_address = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp order_expiration = 4;
}

message CheckOrderStatusRequest {
  string id = 1;
}

message CheckOrderStatusResponse {
  string id = 1;
  OrderStatus status = 2;
  optional string tx_hash = 3;
}